--- a/web/src/app.html
+++ b/web/src/app.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link href="https://api.fontshare.com/v2/css?f[]=satoshi@300,400,500,700,900&display=swap" rel="stylesheet">
-		<title>proxyGov — DAO Twin Chat</title>
+		<title>proxyGov - DAO Twin Chat</title>
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover" class="bg-bg text-text-primary font-sans antialiased">
