--- a/web/src/app.html
+++ b/web/src/app.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="icon" type="image/svg+xml" href="/images/OCB.svg" />
 		<link href="https://api.fontshare.com/v2/css?f[]=satoshi@300,400,500,700,900&display=swap" rel="stylesheet">
 		<title>TwinGovernance - DAO Twin Chat</title>
 		%sveltekit.head%
